Fix typo texture

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <a-scene> 
       <a-assets>
-        <video id= "teture" src = "https://github.com/nah1g14/Aframe-glitch/blob/master/small.mp4"></video>
+        <video id= "texture" src = "https://github.com/nah1g14/Aframe-glitch/blob/master/small.mp4"></video>
       
       </a-assets>
     
