--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  head>
+  <head>
     <meta charset="utf-8">
     <title>360&deg; Image Gallery</title>
     <meta name="description" content="JavaScript - A-Frame School">
