Change video loading

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
   <body>
     <a-scene> 
       <a-assets>
-        <video id= "texture" src = "https://github.com/nah1g14/Aframe-glitch/blob/master/small.mp4"></video>
+        <video id="texture" src="https://github.com/nah1g14/Aframe-glitch/blob/master/small.mp4"
+    crossOrigin="anonymous"
+    autoplay="false"
+    loop="true"
+    style="display: none">
+        </video>
       
       </a-assets>
     
