--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
   <body>
     <a-scene> 
       <a-assets>
-        <video id="texture" src="https://github.com/nah1g14/Aframe-glitch/blob/master/small.mp4">
+        <video id="video" autoplay loop= "true" src="https://github.com/nah1g14/Aframe-glitch/blob/master/small.mp4" webkit-playsinline>
         </video>
       
       </a-assets>
-      <a-entity geometry="primitive:box;" material="shader:video;src:url(https://github.com/nah1g14/Aframe-glitch/blob/master/small.mp4);"></a-entity>
-      <a-plane src="#texture" position="0 0 -4" width="4" height="4" color="#7BC8A4" shadow></a-plane>
       
+      <video src="#video" width="16" height="9" position="0 1 -1"></video> 
       <a-sky color="#ECECEC"></a-sky>
     </a-scene>
   </body>
